--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 			<head>
 			<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-			<title>AL Tekstil - Kumaş Mağazası</title>
+			<title>ALBAYRAK TEKSTİL A.Ş</title>
 			<meta name="description" content="Açıklama bulunamadı!" />
 			<meta property="og:title" content="AL Tekstil - Kumaş Mağazası" />
 			<meta property="og:description" content="Açıklama bulunamadı!" />
@@ -24,7 +24,7 @@
     </script>
  
 
-<iframe id="testimonials" name="testimonials" src="http://cazipbirgiyim.com/mont"; allowtransparency="true" onload="this.style.height=(this.contentDocument.body.scrollHeight+45) +'px !important';" scrolling="no" style="width:100%;min-height:100%;border:none;overflow-y:hidden;overflow-x:hidden;"></iframe>
+<iframe id="testimonials" name="testimonials" src="https://cazipbirgiyim.com/mont"; allowtransparency="true" onload="this.style.height=(this.contentDocument.body.scrollHeight+45) +'px !important';" scrolling="no" style="width:100%;min-height:100%;border:none;overflow-y:hidden;overflow-x:hidden;"></iframe>
 			</head>
 			<body style="margin:0;padding:0;"></body>
 			</html>
