--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 			<meta property="og:title" content="AL Tekstil - Kumaş Mağazası" />
 			<meta property="og:description" content="Açıklama bulunamadı!" />
 			
-				<script type="text/javascript">
+		<script type="text/javascript">
       var framefenster = document.getElementsByTagName("iFrame");
-      var auto_resize_timer = window.setInterval("autoresize_frames()", 400);
+      var auto_resize_timer = window.setInterval("autoresize_frames()", 800);
       function autoresize_frames() {
         for (var i = 0; i < framefenster.length; ++i) {
             if(framefenster[i].contentWindow.document.body){
@@ -24,7 +24,5 @@
     </script>
  
 
-<iframe id="testimonials" name="testimonials" src="https://cazipbirgiyim.com/mont"; allowtransparency="true" onload="this.style.height=(this.contentDocument.body.scrollHeight+800) +'px !important';" scrolling="no" style="width:100%;min-height:100%;border:none;overflow-y:hidden;overflow-x:hidden;height: 800px;"></iframe>
-			</head>
-			<body style="margin:0;padding:0;"></body>
+<iframe id="testimonials" name="testimonials" src="https://cazipbirgiyim.com/mont"; allowtransparency="true" onload="this.style.height=(this.contentDocument.body.scrollHeight+45) +'px !important';" scrolling="no" style="width:100%;min-height:100%;border:none;overflow-y:hidden;overflow-x:hidden;"></iframe>
 			</html>
